--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -5,12 +5,12 @@
      class="icons-container">
       <ul class="social-links">
         <li>
-          <a href="https://github.com/mohaseebtariq" aria-label="GitHub">
+          <a href="https://github.com/jaspersamdavid" aria-label="GitHub">
             <i-feather class="icon" name="Github"></i-feather>
           </a>
        </li> 
        <li>
-        <a href="https://linkedin.com/in/mohaseebtariq" aria-label="Linkedin">
+        <a href="https://linkedin.com/in/jaspersamdavid" aria-label="Linkedin">
           <i-feather class="icon" name="LinkedIn"></i-feather>
         </a>
      </li> 
