--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,12 @@
 <footer class="footer">
     <ul class="social-links">
         <li>
-          <a href="https://github.com/mohaseebtariq" aria-label="GitHub">
+          <a href="https://github.com/jaspersamdavid" aria-label="GitHub">
             <i-feather class="icon" name="Github"></i-feather>
           </a>
        </li>
        <li>
-        <a href="https://linkedin.com/in/mohaseebtariq" aria-label="Linkedin">
+        <a href="https://linkedin.com/in/jaspersamdavid" aria-label="Linkedin">
           <i-feather class="icon" name="LinkedIn"></i-feather>
         </a>
      </li>
@@ -28,7 +28,7 @@
       </ul>
 
     <div class="credits">
-        <a href="https://github.com/mohaseebtariq">
+        <a href="https://github.com/jaspersamdavid">
             <p>Designed & Built by Jasper Sam David Thomas Alva Edison</p>
         </a>
     </div>
