--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -10,23 +10,23 @@
           </a>
        </li> 
        <li>
-        <a href="https://linkedin.com/in/jaspersamdavid" aria-label="Linkedin">
+        <a href="https://www.linkedin.com/in/jasper-sam-david-thomas-alva-edison/" aria-label="Linkedin">
           <i-feather class="icon" name="LinkedIn"></i-feather>
         </a>
      </li> 
      <li>
-      <a href="https://t.me/haseeb_tariq" aria-label="Telegram">
+      <a href="https://t.me/jaspersamdavid" aria-label="Telegram">
         <i-feather class="icon" name="send"></i-feather>
       </a>
    </li> 
      <li>
-      <a href="https://instagram.com/haseeb__tariq" aria-label="Instagram">
+      <a href="https://instagram.com/jasper.sam.9" aria-label="Instagram">
         <i-feather class="icon" name="Instagram"></i-feather>
       </a>
    </li> 
    <li>
-    <a href="https://twitter.com/tweetsofht" aria-label="Twitter">
-      <i-feather class="icon" name="Twitter"></i-feather>
+    <a href="https://www.facebook.com/jasper.sam.9" aria-label="Facebook">
+      <i-feather class="icon" name="Facebook"></i-feather>
     </a>
  </li> 
       </ul>
