--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
+<div class="emptybox">
+</div>
+<div class="backgroundpic">
 <section class="main-section">
   <p class="sec__heading">Hi, my name is</p>
   <div class="heading">
@@ -13,3 +16,4 @@
     <a class="btn" href="/assets/resume.pdf">Resume</a>
   </div>
 </section>
+</div>
