--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -67,5 +67,21 @@ p.sec__desc {
   .main-section {
     margin-top: 8vh;
     margin-bottom: 5vh;
+
   }
 }
+
+.backgroundpic{
+  background-image: url("../../../assets/images/PLS07137.jpeg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 60% ;
+  // padding-top: 500px ;
+  background-attachment: fixed;
+}
+
+// .emptybox{
+
+//   min-height: 300px;
+// }
+
