--- a/src/app/components/about/about.component.scss
+++ b/src/app/components/about/about.component.scss
@@ -43,7 +43,7 @@ $imgFillColor: var(--img-fill-color);
 
 ul.skills-list {
     display: grid;
-    grid-template-columns: repeat(2, minmax(140px, 200px));
+    grid-template-columns: repeat(3, minmax(140px, 200px));
     padding: 0px;
     overflow: hidden;
     color: $primaryTextColor;
@@ -75,4 +75,8 @@ ul.skills-list li::before {
     .user__info {
         display: block;
     }
+}
+
+.qutoe{
+    
 }
