--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -32,6 +32,9 @@
       <a href="#about">About</a>
     </li>
     <li>
+      <a href="#skills">Skills</a>
+    </li>
+    <li>
       <a href="#experience">Experience</a>
     </li>
     <li>
