--- a/src/app/components/projects/projects.component.scss
+++ b/src/app/components/projects/projects.component.scss
@@ -58,7 +58,7 @@
   -webkit-box-sizing: initial;
   -moz-box-sizing: initial;
   box-sizing: initial;
-  background: #206453;
+  background: grey;
   margin: 0;
   height: 100%;
   width: 100%;
