--- a/src/app/shared/components/layout/layout.component.html
+++ b/src/app/shared/components/layout/layout.component.html
@@ -32,6 +32,7 @@
       </ul>
       </div>
     <app-about></app-about>
+    <app-skills></app-skills>
     <app-experience></app-experience>
     <app-projects></app-projects>
     <app-contact></app-contact>
